--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "word-list-app",
   "version": "0.1.0",
+  "homepage": "https://tessmore.github.io/word-list-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,15 +13,21 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1",
+    "prettier": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "format": "prettier --write \"src/**/*.{tsx,json,css,md}\""
   },
   "eslintConfig": {
@@ -39,8 +46,5 @@
       "last 2 chrome version",
       "last 2 firefox version"
     ]
-  },
-  "devDependencies": {
-    "prettier": "^3.3.3"
   }
 }
