--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run format && npm run build",
     "deploy": "gh-pages -d build",
     "format": "prettier --write \"src/**/*.{tsx,json,css,md}\""
   },
