--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/lodash": "^4.17.7",
     "gh-pages": "^6.1.1",
     "prettier": "^3.3.3"
